# sentimentanalysis

./: .env.example  .gitignore  Dockerfile.spark  Dockerfile.streamlit  PROJECT_ANALYSIS.md  README.md  REPORT.md  access_server.md  docker-compose.yml  package-lock.json  pyproject.toml  run.py
analysis/: 1900_export_reviews.csv  absa_analysis.ipynb  dashboard.py  generate_report.py  generate_segment_insights.py  generate_slide_results.py  pho_bert.ipynb  pho_bert_binary.ipynb  readme.md  report.md  report_academic.aux  report_academic.out  report_academic.tex  top120_freq.py  train_binary_models.py  training_results.json
dags/: crawl_reviews_dag.py
models/: .last_fingerprint  best_model_meta.json
models/variants/: binary_no_neutral__TFIDF_WordChar_LinearSVC.pkl  cleanlab_pruned_3class__TFIDF_WordChar_LogisticRegression.pkl  mixed_conflict_4class__TFIDF_WordChar_LogisticRegression.pkl  original_3class__TFIDF_WordChar_LogisticRegression.pkl
slide/: index.html  links.docx  package.json  pnpm-lock.yaml  project_flow_vi.md  slide_content.md  speaker_script_en.md  speaker_script_vi.md  vite.presentation.config.js
slide/css/: custom.css
slide/partials/: 01-title.html  02-problem.html  03-dataset.html  04-preprocessing.html  05-model.html  06-results.html  07-insights.html  08-conclusion.html
src/: config.py  database.py  models.py
src/analysis/: absa.py
src/crawler/: bloom_filter.py  parser.py  producer.py  scraper.py
src/export/: app.py
src/preprocessing/: processor.py  stopwords_vi.py
src/streaming/: consumer.py
src/training/: __init__.py  labeling.py  (+5 more)
